--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 p-8">
 
-    <div class="bg-white max-w-3xl mx-auto py-6 px-8 shadow-xl">
+    <div class="max-w-3xl mx-auto">
         <ul class="list"></ul>
         <button data-action="new-task" class="rounded-full px-3 py-1 text-xs bg-green-500 text-white mt-6 shadow-md">+ Add Task</button>
     </div>
