--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Todo</title>
-    <link href="https://unpkg.com/tailwindcss@1.1.3/dist/tailwind.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 p-8">
+<body>
 
-    <div class="max-w-3xl mx-auto">
+    <div class="container">
+        <h1>Today</h1>
+
         <ul class="list"></ul>
-        <button data-action="new-task" class="rounded-full px-3 py-1 text-xs bg-green-500 text-white mt-6 shadow-md">+ Add Task</button>
     </div>
 
+    <template id="icon">
+        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 49.15 79.11"><title>sortable</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><circle cx="9.85" cy="9.85" r="9.85"/><circle cx="39.29" cy="9.85" r="9.85"/><circle cx="9.85" cy="39.55" r="9.85"/><circle cx="39.29" cy="39.55" r="9.85"/><circle cx="9.85" cy="69.26" r="9.85"/><circle cx="39.29" cy="69.26" r="9.85"/></g></g></svg>
+    </template>
+
+<script src="vendor/sortable.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
