Trying to fix direct mutation issue

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <ul class="list">
                 <c-task
                     v-for="task in tasks"
-                    v-bind:id="task.id"
-                    v-bind:name="task.name"
-                    v-bind:done="task.isDone"
-                    v-bind:key="task.id"
+                    :id="task.id"
+                    :name="task.name"
+                    :done="task.isDone"
+                    :key="task.id"
+                    :ref="task.id"
                 ></c-task>
             </ul>
         </div>
