--- a/index.html
+++ b/index.html
@@ -1,25 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Todo</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Todo</title>
+        <link href="style.css" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div class="container">
+            <h1>List</h1>
+            <ul class="list list--flipped"></ul>
+        </div>
 
-    <div class="container">
-        <h1>Today</h1>
-        <ul class="list"></ul>
-    </div>
+        <template id="icon">
+            <svg
+                class="icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 49.15 79.11"
+            >
+                <title>sortable</title>
+                <g id="Layer_2" data-name="Layer 2">
+                    <g id="Layer_1-2" data-name="Layer 1">
+                        <circle cx="9.85" cy="9.85" r="9.85" />
+                        <circle cx="39.29" cy="9.85" r="9.85" />
+                        <circle cx="9.85" cy="39.55" r="9.85" />
+                        <circle cx="39.29" cy="39.55" r="9.85" />
+                        <circle cx="9.85" cy="69.26" r="9.85" />
+                        <circle cx="39.29" cy="69.26" r="9.85" />
+                    </g>
+                </g>
+            </svg>
+        </template>
 
-    <template id="icon">
-        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 49.15 79.11"><title>sortable</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><circle cx="9.85" cy="9.85" r="9.85"/><circle cx="39.29" cy="9.85" r="9.85"/><circle cx="9.85" cy="39.55" r="9.85"/><circle cx="39.29" cy="39.55" r="9.85"/><circle cx="9.85" cy="69.26" r="9.85"/><circle cx="39.29" cy="69.26" r="9.85"/></g></g></svg>
-    </template>
-
-<script src="vendor/sortable.js"></script>
-<script src="main.js"></script>
-</body>
+        <script src="vendor/sortable.js"></script>
+        <script src="main.js"></script>
+    </body>
 </html>
