Add toggle switch

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
         />
     </head>
     <body>
+        <header>
+            <label class="switch">
+                <input type="checkbox" />
+                <span class="switch__toggle"></span>
+                Flip checkboxes
+            </label>
+        </header>
         <div class="container">
             <h1>List</h1>
-            <ul class="list list--flipped"></ul>
+            <ul class="list"></ul>
         </div>
 
         <template id="icon">
